fix size plantdetail+catalog spacing

--- a/src/components/Filters/Filters.scss
+++ b/src/components/Filters/Filters.scss
@@ -5,7 +5,6 @@
   @include content-box();
   margin-right: 20px;
   padding: 30px 20px;
-  margin-bottom: 50px;
   align-self: flex-start;
   &__title,
   .filter__pots-title {
@@ -13,7 +12,7 @@
     font-weight: 700;
     font-size: 18px;
     @media (min-width: 530px) {
-      font-size: 24px;
+      font-size: 22px;
     }
   }
   &__pots{
@@ -68,7 +67,7 @@
     font-size: 16px;
     font-weight: 700;
     @media (min-width: 530px) {
-      font-size: 24px;
+      font-size: 22px;
     }
   }
 }
