--- a/src/pages/PlantDetail/PlantDetail.scss
+++ b/src/pages/PlantDetail/PlantDetail.scss
@@ -5,48 +5,87 @@
   justify-content: center;
   padding-left: 10px;
   padding-right: 10px;
-  &__inner{
+  &__inner {
     @include content-box();
-    padding: 0;
+    padding: 0 20px 0 0;
+    width: 100%;
+    max-width: 1200px;
+    display: flex;
+    align-items: center;
+    min-height: 480px;
   }
   &__box {
-
     display: flex;
-    justify-content: center;
     align-items: center;
     padding: 0;
     flex-wrap: wrap;
-    @media (min-width: 600px) {
+    width: 100%;
+    height: 100%;
+    @media (min-width: 900px) {
       flex-wrap: nowrap;
     }
   }
   &__info {
     margin-right: 30px;
+    margin-left: 30px;
+    flex: 1;
+    max-width: 400px;
+    text-align: center;
+    @media (max-width: 900px) {
+      order: 0; 
+    }
+  }
+  &__img-wrapper {
+    width: 100%;
+    max-width: 300px;
+    height: 480px;
+    overflow: hidden;
+    margin-right: 20px;
+    @media (max-width: 900px) {
+      width: auto;
+      height: auto;
+      margin-right: 0;
+    }
   }
   &__img {
-    max-width: 40%;
+    width: 100%;
     height: 100%;
-    border-radius: none;
-    margin-right: 0;
-    margin-top: 10px;
-    @media (min-width: 600px) {
-      border-top-left-radius: 15px;
-      border-bottom-left-radius: 15px;
-      margin-top: 0;
-      margin-right: 10px;
+    border-top-left-radius: 15px;
+    border-bottom-left-radius: 15px;
+    margin-top: 0;
+    @media (max-width: 900px) {
+      border-bottom-left-radius: 0;
     }
   }
   &__img--sample {
-    margin-right: 0;
-    @media (min-width: 600px) {
-      margin-right: 10px;
-    }
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-top-left-radius: 15px;
+    border-bottom-left-radius: 15px;
   }
   &__title {
     margin-top: 30px;
+    font-size: 30px;
+    @media (max-width: 900px) {
+      font-size: 24px;
+    }
   }
   &__text {
     text-align: center;
     font-size: 18px;
+    @media (max-width: 900px) {
+      font-size: 16px;
+    }
+  }
+  &__table {
+    flex: 1;
+    width: 100%;
+    max-width: 400px;
+    @media (max-width: 900px) {
+      width: 100%;
+      margin: 0 auto;
+      order: 1;
+    }
   }
 }
